test/typecheck/errors/bad-views6.boa
view sv4 {
	o: output sum of int;
	s := 2;

	o << 0;
}

v := sv4/o;

c := v._c123f;